@@ -121,6 +121,7 @@ All (Unix):
 - Fixed shared libraries to not depend on GStreamer when built with
   --enable-media; only wxMedia library depends on it now.
 - wxLaunchDefaultBrowser() now uses xdg-open if available.
+- Don't close UDP socket if an empty datagram is received (Mikkel S)
 
 wxMSW:
 
